# adventofcode-2023

./: .gitattributes  .gitignore  README.md  pyproject.toml  solution.py
day_01/: solution.py
day_02/: solution.py
day_04/: solution.py
day_05/: README.md  answer.txt  solution.py  test.py
day_06/: answer.txt  solution.py
day_07/: answer.txt  solution.py
day_08/: solution.py
src/aoc/: __init__.py  cli.py  colors.py  direction.py  graph.py  grid.py  lines.py  matrix.py  point.py  utils.py  vector.py
src/aoc/day_01/: input.txt  solution.py  task.txt
src/aoc/day_02/: input.txt  solution.py  task.txt
src/aoc/day_03/: input.txt  solution.py  task.txt
src/aoc/day_04/: input.txt  solution.py  task.txt
src/aoc/day_05/: README.md  input.txt  solution.py  task.txt
src/aoc/day_06/: input.txt  solution.py  task.txt
src/aoc/day_07/: input.txt  solution.py  task.txt
src/aoc/day_08/: README.md  answer.py  input.txt  solution.py  task.txt
src/aoc/day_09/: input.txt  solution.py  task.txt
src/aoc/day_10/: input.txt  solution.py  task.txt
src/aoc/day_11/: input.txt  solution.py  task.txt
src/aoc/day_12/: input.txt  solution.py  task.txt  test.3.txt
src/aoc/day_13/: input.txt  solution.py  task.txt
src/aoc/day_14/: __init__.py  estimator.py  input.txt  solution.py  task.txt
src/aoc/day_15/: input.txt  solution.py  task.txt
src/aoc/day_16/: input.txt  solution.py  task.txt
src/aoc/day_17/: input.txt  solution.py  task.txt  (+1 more)
tests/aoc/: test_direction.py  test_graph.py  test_grid.py  test_matrix.py  test_point.py  test_ray.py  test_utils.py
(+36 files in other folders)
