[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc2023"
version = "0.14.0"
authors = [
    {name = "Nikolai Krot", email = "talpus@gmail.com"}
]
description = "Solutions to Advent of Code, Year 2023"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.7"
dependencies = [
    "click"
]
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
aoc2023 = "aoc.cli:main"
